--- a/react/package.json
+++ b/react/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html"
   },
   "author": "",
   "license": "ISC",
@@ -12,11 +14,16 @@
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
     "eslint": "^5.9.0",
-    "eslint-config-steelsojka": "^1.0.0",
-    "parcel-bundler": "^1.10.3"
+    "eslint-config-steelsojka": "^1.0.1",
+    "parcel-bundler": "^1.10.3",
+    "typescript": "^3.1.6"
   },
   "dependencies": {
     "react": "^16.7.0-alpha.2",
-    "react-dom": "^16.7.0-alpha.2"
+    "react-dom": "^16.7.0-alpha.2",
+    "src": "^1.1.2"
+  },
+  "alias": {
+    "src": "./src"
   }
 }
